tests/error/nested_errors/var_not_defined.err
Error: Variable not defined (at $FILE:7:15)
  | 
5 | def foo() -> int:
6 |     def bar() -> int:
7 |         return x
  |                ^ `x` is not defined

Guppy compilation failed due to 1 previous error
